# Procedural-Flocking-System

./: CMakeLists.txt  README.md
include/: Boid.h  Flock.h  NGLScene.h  mainwindow.h
shaders/: ParticleFragment.glsl  ParticleVertex.glsl
src/: Boid.cpp  Flock.cpp  NGLScene.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
